; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/plugins/auth-pam/extr_test_search_and_replace.c_pass_any_empty_string__returns_null.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/plugins/auth-pam/extr_test_search_and_replace.c_pass_any_empty_string__returns_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.pass_any_empty_string__returns_null.DUMMY = private unnamed_addr constant [6 x i8] c"DUMMY\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pass_any_empty_string__returns_null to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pass_any_empty_string__returns_null() #0 {
  %1 = alloca [6 x i8], align 1
  %2 = alloca [1 x i8], align 1
  %3 = bitcast [6 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %3, i8* align 1 getelementptr inbounds ([6 x i8], [6 x i8]* @__const.pass_any_empty_string__returns_null.DUMMY, i32 0, i32 0), i64 6, i1 false)
  %4 = bitcast [1 x i8]* %2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %4, i8 0, i64 1, i1 false)
  %5 = getelementptr inbounds [1 x i8], [1 x i8]* %2, i64 0, i64 0
  %6 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %7 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %8 = call i32 @searchandreplace(i8* %5, i8* %6, i8* %7)
  %9 = call i32 @assert_null(i32 %8)
  %10 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %11 = getelementptr inbounds [1 x i8], [1 x i8]* %2, i64 0, i64 0
  %12 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %13 = call i32 @searchandreplace(i8* %10, i8* %11, i8* %12)
  %14 = call i32 @assert_null(i32 %13)
  %15 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %16 = getelementptr inbounds [6 x i8], [6 x i8]* %1, i64 0, i64 0
  %17 = getelementptr inbounds [1 x i8], [1 x i8]* %2, i64 0, i64 0
  %18 = call i32 @searchandreplace(i8* %15, i8* %16, i8* %17)
  %19 = call i32 @assert_null(i32 %18)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert_null(i32) #2

declare dso_local i32 @searchandreplace(i8*, i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
